# raylib-template-5_0

./: .clangd  CMakeLists.txt
src/: main.cpp
